Mon Nov 13 00:09:29 2000  Robert Brady  <robert@suse.co.uk>

	* configure.in: Chinese .pos have been renamed to zh_CN and zh_TW
	respectively.
	
Sun Nov 12 19:11:42 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextlayout.c (gtk_text_layout_move_iter_to_next_line):
	Fix warning when moving between paragraphs.

	* gtk/gtkentry.[ch]: Change move => move_cursor, 
	delete => delete_from_cursor, insert => insert_at_cursor

Sun Nov 12 22:52:51 2000  Robert Brady  <robert@suse.co.uk>

	* modules/input/imviqr.c: A vietnamese VIQR-based input method.

	* modules/input/imthai-broken.c: A Thai input method for use if
	Thai keys are really generating Latin1 keysyms.

	* modules/input/Makefile.am: Build these.

Sun Nov 12 22:15:35 2000  Robert Brady  <robert@suse.co.uk>

	* gtk/gtkfileselection.c, gdk/win32/gdkfont-win32.c: 
	g_filename_{to,from}_utf8 now takes an extra parameter.

	* gtk/gtkcalendar.c (gtk_calendar_init): Convert output of
	strftime into UTF-8.

	(column_from_x, gtk_calendar_paint_day_names): Support RTL
	calendars.

	(gtk_calendar_paint_day_names): Draw day names in the right 
	place.
	
Sun Nov 12 14:10:09 2000  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkselection-x11.c (gdk_utf8_to_compound_text): Fix
	problem with using result of g_get_charset() backwards -
	pointed out by Mikael Hermansson <mikeh@bahnhof.se>.

	* gtk/gtkwindow.c (gtk_window_compute_hints): Support
	negative min_width/height and max_width/height to
	mean "requisition"; this allows setting a window
	to be user-resizable in only one direction easily.

	* gtk/testgtk.c (create_main_window): Remove hard-coded
	usize - set a default size in the vertical direction.

Sun Nov 12 13:33:01 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrange.c: Add some missing casts. Support 
	2 and 3 button clicks on the arrows to mean 
	"move by pages" and "jump to end". (Like gtkspinbutton)

2000-11-12 Hans Breuer <Hans@Breuer.Org>

	* gdk/win32/makefile.msc : reflect build module changes
